2008-02-11  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Bugfix: event used in place of x when
	xmlns is pubsub#event (EJAB-518)

2008-02-11  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Bugfix: local message stanza may
	not have an attribute From (EJAB-515)

2008-02-08  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Include the error condition in the
	presence status when kicking a participant due to an error
	stanza (EJAB-496)

	* src/ejabberd.cfg.example: Document options to SQL keep alive
	interval and pool size (EJAB-206)
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

2008-02-06  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Support for decline of invitation
	to MUC room (EJAB-515)

2008-02-06  Mickael Remond <mremond@process-one.net>

	* src/mod_pubsub/node_buddy.erl: Fixed typo
	* src/mod_pubsub/node_club.erl: Likewise
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node.template: Likewise
	
	* src/mod_pubsub/gen_pubsub_node.erl: API improvement: Added a way
	to generate custom item name
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_buddy.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node_club.erl: Likewise
	* src/mod_pubsub/node_public.erl: Likewise
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Small API improvements and
	refactoring

2008-02-04  Badlop  <badlop@process-one.net>

	* src/ejabberd.hrl: Updated version to 2.1.0-alpha
	* doc/dev.html: Likewise
	* doc/features.html: Likewise
	* doc/guide.html: Likewise
	* doc/version.tex: Likewise

2008-02-04  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Append "(n/a)" to disco room
	descriptions when a number of occupants is not available
