@@ -1,3 +1,8 @@
+2008-02-11  Mickael Remond <mremond@process-one.net>
+
+	* src/ejabberd_receiver.erl: Avoid crash to appear in log, when
+	trying to close a stream with an undefined state.
+
 2008-02-11  Christophe Romain <christophe.romain@process-one.net>
 
 	* src/mod_pubsub/mod_pubsub.erl: Bugfix: event used in place of x when
